Add dependency and fix imports

--- a/openg2p-g2pconnect-mapper-lib/pyproject.toml
+++ b/openg2p-g2pconnect-mapper-lib/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "openg2p-g2pconnect-common-lib",
 ]
 dynamic = ["version"]
 
