--- a/openg2p-g2pconnect-common-lib/pyproject.toml
+++ b/openg2p-g2pconnect-common-lib/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
   "Operating System :: OS Independent",
 ]
 dependencies = [
+  "openg2p-fastapi-common",
 ]
 dynamic = ["version"]
 
