--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,5 +46,8 @@ jobs:
         run: |
           pytest --cov-branch --cov-report=term-missing --cov=openg2p_g2pconnect_common_lib --cov=tests openg2p-g2pconnect-common-lib
           pytest --cov-branch --cov-report=term-missing --cov=openg2p_g2pconnect_mapper_lib --cov=tests openg2p-g2pconnect-mapper-lib --cov-append
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+
