Ignore workflow/actions on tag push

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Publish to PyPI
 
 on:
-  release:
-    types:
-      - created
+  push:
+    tags-ignore:
+      - '**'
   workflow_dispatch:
 
 jobs:
