--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,8 @@ name: Test and coverage
 on:
   pull_request:
   push:
+    branches:
+      - "**"
     tags-ignore:
       - '**'
   workflow_dispatch:
